lots done: article added, cleaned & formatted, to work/experiments; body padding added to correct work footer from covering content [90px].

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body {
     font-family:neuehaasunicapro-thin;
     height: 100%;
     overflow: hidden;
+    padding-bottom: 80px;
 }
 h1 {
     font-family: neuehaasunicapro-xblack;
